--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/Safvenberger/hockey-api"
 keywords = ["scraping", "hockey", "sports analytics"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.7,<4.0"
 numpy = "^1.22.3"
 pandas = "^1.3.4"
 pandera = "^0.9.0"
@@ -19,6 +19,8 @@ requests = "^2.26.0"
 selectolax = "^0.3.11"
 tqdm = "^4.64.1"
 
+[tool.poetry.dev-dependencies]
+pytest="^5.2"
 
 [build-system]
 requires = ["poetry-core"]
